--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,13 +1,16 @@
-NAME =
+NAME = phone
 
-SRC =
+SRC = MyAwesomePhonebook.cpp
 
 FLAGS = -Wall -Werror -Wextra
 
 CPP_V = -std=c++98
 
 ${NAME} :
+	@printf "\n"
+	@printf "Creating your awesome phonebook ! : \n"
 	c++ ${CPP_v} ${FLAGS} ${SRC} -o ${NAME}
+	@printf "\n"
 
 all : ${NAME}
 
